<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiLogin.login.LoginFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical">


        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editextAlto"
            android:ems="10"
            style="@style/bordes"
            android:hint="@string/persona_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/espacio"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editextAlto"
            style="@style/bordes"
            android:ems="10"
            android:hint="@string/persona_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/loginSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/bordes" />

        <Button
            android:id="@+id/loginIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            style="@style/botones"/>

        <Button
            android:id="@+id/loginRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            style="@style/botones"/>

        <Button
            android:id="@+id/loginCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:visibility="gone"
            style="@style/botones"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>