<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiLogin.registro.RegistroFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/editextAlto"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nombre"
                style="@style/bordes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editextAlto"
                android:ems="10"
                android:hint="@string/persona_nombre"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>

            <EditText
                android:id="@+id/apellido"
                style="@style/bordes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_apellido"
                android:inputType="textPersonName" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>

            <EditText
                android:id="@+id/dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                style="@style/bordes"
                android:hint="@string/persona_dni"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>


            <EditText
                android:id="@+id/telefono"
                style="@style/bordes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_telefono"
                android:inputType="phone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>

            <EditText
                android:id="@+id/email"
                style="@style/bordes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>

            <EditText
                android:id="@+id/password"
                style="@style/bordes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_password"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>

            <EditText
                android:id="@+id/passwordConfirma"
                style="@style/bordes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Confirmar Password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/espacio"/>


            <Button
                android:id="@+id/registrar"
                style="@style/botones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>