<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".ui.diagnostico.DiagnosticoFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo_progres_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_progres_1"
            android:textSize="@dimen/size_titulos" />

        <TextView
            android:id="@+id/sub_titulo_progres_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub_titulo_progres_1"
            android:textSize="@dimen/size_sub_titulos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Botones_margin"
            android:layout_weight="1"
            android:elevation="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/porcentaje_progress1"
                android:layout_width="0dp"
                android:layout_height="@dimen/barra_estado_alto"
                android:layout_marginRight="@dimen/Botones_margin"
                android:layout_weight="2"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="0%" />

            <ProgressBar
                android:id="@+id/progressBar_1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="@dimen/barra_estado_alto"
                android:layout_weight="8"
                android:background="@drawable/bordes" />
        </LinearLayout>

        <TextView
            android:id="@+id/titulo_progres_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_weight="1"
            android:text="@string/titulo_progres_2"
            android:textSize="@dimen/size_titulos" />

        <TextView
            android:id="@+id/sub_titulo_progres_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/sub_titulo_progres_2"
            android:textSize="@dimen/size_sub_titulos" />

        <TextView
            android:id="@+id/encabezado_progres_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Botones_margin"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/encabezado_progres_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Botones_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/porcentaje_progress2"
                android:layout_width="0dp"
                android:layout_height="@dimen/barra_estado_alto"
                android:layout_marginRight="@dimen/Botones_margin"
                android:layout_weight="2"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="0%" />

            <ProgressBar
                android:id="@+id/progressBar_2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="@dimen/barra_estado_alto"
                android:layout_weight="8"
                android:elevation="2dp"
                android:background="@drawable/bordes" />
        </LinearLayout>

        <TextView
            android:id="@+id/encabezado_progres_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Botones_margin"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/encabezado_progres_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Botones_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/porcentaje_progress3"
                android:layout_width="0dp"
                android:layout_height="@dimen/barra_estado_alto"
                android:layout_marginRight="@dimen/Botones_margin"
                android:layout_weight="2"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="0%" />

            <ProgressBar
                android:id="@+id/progressBar_3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="@dimen/barra_estado_alto"
                android:layout_weight="8"
                android:background="@drawable/bordes" />
        </LinearLayout>

        <Button
            android:id="@+id/continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Botones_margin"
            style="@style/botones"
            android:text="@string/btn_resultado" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>