<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.historial.HistorialFragment">


    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/size_titulos"
        android:text="Historal" />
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:id="@+id/divider4"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="@dimen/size_titulos"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/item"/>


        <View
            android:id="@+id/divider2"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_titulos"
            android:layout_weight="2"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/fecha"/>


        <View
            android:id="@+id/divider3"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/diagnostico"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_titulos"
            android:layout_weight="3"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/title_diagnostico"/>

        <View
            android:id="@+id/divider5"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>