<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_bottom_margin"
    tools:context=".ui.resultados.ResultadosIaFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bordes">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_titulos"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@color/purple_500"
            android:text="@string/subtitulo" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_titulos"
            android:text="@string/precision" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="50dp">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_sub_titulos"
            android:text="Diverticulos irritados" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_sub_titulos"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="Debilidad en tiroides - Debilidad cardiaca" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_sub_titulos"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="* Especifidad = 87%" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_sub_titulos"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="* Prevalencia = 86%" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_sub_titulos"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="* Falso Positivo = 5%" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_sub_titulos"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="* Falso Negativo" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_sub_titulos"
            android:text="* Matris de confusion = 90%" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_sub_titulos"
            android:text="* ROC Curve y Umbral = 86%" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_sub_titulos"
            android:text="* Intervalo de confianza = 3 sigmas requerido" />
    </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/bordes"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precision"
                android:textColor="@color/black"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"
                android:text="Diverticulos irritados" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_sub_titulos"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="Debilidad en tiroides - Debilidad cardiaca" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_modelo_iris"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prediagnostico_modelo"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Leisión en glándula tiroidea"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Leisión en área bronquial"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Divertículos en cólon descendente"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Debilidad cardíaca"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"/>

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coincidencia"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_sub_titulos"
                android:textColor="#FF5722"/>


        </LinearLayout>
        <Button
            android:id="@+id/continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/botones"
            android:text="@string/btn_continuar" />

    </LinearLayout>



</ScrollView>